--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "angular-ui-grid",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "homepage": "http://ui-grid.info",
   "repository": {
     "type": "git",
-    "url": "https://github.com/angular-ui/ui-grid.info.git"
+    "url": "https://github.com/heppa/ui-grid.info.git"
   },
   "authors": [
     "__Contributors__"
